[gd_scene load_steps=11 format=3 uid="uid://d10j56tf4y7s1"]

[ext_resource type="Script" path="res://Scripts/world_level_1.gd" id="1_gnmtq"]
[ext_resource type="PackedScene" uid="uid://ccs0kxumh2jm7" path="res://Scenes/enemy_level1.tscn" id="3_e2twh"]
[ext_resource type="PackedScene" uid="uid://dtc4r4mabjaoa" path="res://Scenes/player_level1.tscn" id="4_gx7ah"]
[ext_resource type="PackedScene" uid="uid://c0lcmnwp85jmn" path="res://Scenes/node_2d.tscn" id="4_hjhsd"]
[ext_resource type="PackedScene" uid="uid://dp5itgrgtpbsv" path="res://Scenes/enemy_level2.tscn" id="4_n70le"]
[ext_resource type="Texture2D" uid="uid://6s1lnljf2b53" path="res://Assets/light.png" id="5_1lomw"]
[ext_resource type="Script" path="res://Scripts/Spotlight.gd" id="6_qd8p8"]
[ext_resource type="AudioStream" uid="uid://djmtjwo8l48k5" path="res://Assets/Audio/backgorund audio.mp3" id="7_q1hnu"]
[ext_resource type="AudioStream" uid="uid://dp00yxavxsojr" path="res://Assets/Audio/grenade_final.mp3" id="7_qtgwd"]
[ext_resource type="Script" path="res://Scenes/grenade.gd" id="9_vd14c"]

[node name="World_level1" type="Node2D"]
script = ExtResource("1_gnmtq")

[node name="Map" parent="." instance=ExtResource("4_hjhsd")]
position = Vector2(-232, 116)
scale = Vector2(4, 4)

[node name="enemy" parent="." instance=ExtResource("3_e2twh")]
position = Vector2(-4184, -2757)
scale = Vector2(0.28, 0.278)

[node name="enemy2" parent="." instance=ExtResource("4_n70le")]
position = Vector2(-2788, -995)
scale = Vector2(0.278, 0.278)
collision_layer = 7
collision_mask = 7

[node name="Player" parent="." instance=ExtResource("4_gx7ah")]
position = Vector2(521, 363)
scale = Vector2(0.25, 0.25)

[node name="Camera2D" type="Camera2D" parent="Player"]

[node name="PointLight2D" type="PointLight2D" parent="Player"]
energy = 0.71
shadow_enabled = true
texture = ExtResource("5_1lomw")
texture_scale = 4.15
script = ExtResource("6_qd8p8")

[node name="Spotlight_cooldown" type="Timer" parent="Player/PointLight2D"]
wait_time = 10.0

[node name="PointLight2D2" type="PointLight2D" parent="Player"]
position = Vector2(-0.400024, 0)
scale = Vector2(0.999786, 1)
energy = 0.57
texture = ExtResource("5_1lomw")
texture_scale = 7.3

[node name="EnemyDirection" type="RayCast2D" parent="Player"]
target_position = Vector2(-444.74, -300)

[node name="Line2D" type="Line2D" parent="Player"]

[node name="grenade_cooldown" type="Timer" parent="."]
wait_time = 5.0

[node name="CanvasModulate" type="CanvasModulate" parent="."]
visible = false
color = Color(0.0253638, 0.0253638, 0.0253638, 1)

[node name="AudioStreamPlayer2D2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_qtgwd")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_q1hnu")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
script = ExtResource("9_vd14c")

[node name="ProgressBarDash" type="ProgressBar" parent="CanvasLayer"]
offset_left = 29.0
offset_top = 72.0
offset_right = 255.0
offset_bottom = 99.0
show_percentage = false

[node name="ProgressBarGrenade" type="ProgressBar" parent="CanvasLayer"]
offset_left = 24.0
offset_top = 19.0
offset_right = 250.0
offset_bottom = 46.0
show_percentage = false

[node name="GrenadeLabel" type="RichTextLabel" parent="CanvasLayer"]
anchors_preset = -1
anchor_left = -1.061
anchor_top = -0.638
anchor_right = -0.075
anchor_bottom = 0.305
offset_left = 1287.27
offset_top = 433.424
offset_right = 371.4
offset_bottom = -103.64
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Grenade available"

[node name="DashLabel" type="RichTextLabel" parent="CanvasLayer"]
offset_left = 83.0
offset_top = 72.0
offset_right = 267.0
offset_bottom = 107.0
text = "Dash Available"

[node name="Instructions" type="RichTextLabel" parent="CanvasLayer"]
offset_left = 986.0
offset_top = 526.0
offset_right = 1184.0
offset_bottom = 713.0
text = "WASD - Move
F - Dash
Space - Vision
Left Click - Grenade"

[node name="GameMsg" type="RichTextLabel" parent="CanvasLayer"]
offset_left = 535.0
offset_top = 185.0
offset_right = 1013.0
offset_bottom = 468.0
bbcode_enabled = true
fit_content = true

[node name="grenade_timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="timeout" from="grenade_cooldown" to="." method="_on_grenade_cooldown_timeout"]
